# Amp-Plugin-Project

./: .gitignore  CMakeLists.txt  LICENSE  NewProject.jucer  README.md
Models/: default.nam  mesa_crush.nam
Source/: PixelLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h
Source/NAM/: get_dsp.cpp
